Version 3.5.0.x (2012-05-xx)
	Added new onBeforeAdd event to UndoManager patch contributed by Dan Rumney.
	Fixed bug where links wasn't automatically created by the autolink plugin on old IE versions when pressing enter in BR mode.
	Fixed bug where enter on older IE versions wouldn't produce a new paragraph if the previous sibling paragraph was empty.
	Fixed bug where toString on a faked DOM range on older IE versions wouldn't return a proper string.
	Fixed bug where named anchors wouldn't work properly when schema was set to HTML5.
	Fixed bug where HTML5 datalist options wasn't correctly parsed or indented.
	Fixed issue where the autolink plugin wouldn't properly handle mailto:user@domain.com.
Version 3.5.0.1 (2012-05-10)
	Fixed bug where selection normalization logic would break the selections of parent elements using the element path.
	Fixed bug where the autolink plugin would include trailing dots in domain names in the link creation.
	Fixed bug where the autolink plugin would produce an error on older IE versions when pressing enter.
	Fixed bug where old IE versions would throw an error during initialization when the editor was placed in an size restricted div.
Version 3.5 (2012-05-03)
	Fixed menu rendering issue if the document was in rtl mode.
	Fixed bug where the hide function would throw an error about a missing variable.
	Fixed bug where autolink wouldn't convert URLs when hitting enter on IE due to the new enter key logic.
	Fixed bug where formatting using shortcuts like ctrl+b wouldn't work properly the first time.
	Fixed bug where selection.setContent after a formatter call wouldn't generate formatted contents.
	Fixed bug where whitespace would be removed before/after invalid_elements when they where removed.
	Fixed bug where updating styles using the theme image dialog in non inline mode on IE9 would produce errors.
	Fixed bug where IE 8 would produce an error when using the contextmenu plugin.