@@ -1,0 +1,2 @@
+body, div, h1 { font-family: 'trebuchet ms', verdana, arial }
+body {font-size: 10pt; }
